# dgi-toolkit

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  coverage.xml  env.example  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  pr.yml
ai_chat/: __init__.py  chat_demo.py  screener_tool.py
data/: fundamentals_small.csv
dgi/: cli.py  cli_helpers.py  config.py  exceptions.py  filtering.py  models.py  portfolio.py  scoring.py  screener.py  validation.py
dgi-toolkit/: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  pytest.ini
dgi-toolkit/.github/workflows/: ci.yml
dgi-toolkit/ai_chat/: screener_tool.py
dgi-toolkit/dgi/: portfolio.py
dgi-toolkit/docs/: SCAFFOLDING.md
dgi-toolkit/notebooks/: dgi_portfolio_builder.ipynb
dgi-toolkit/tests/: test_portfolio.py
dgi/models/: __init__.py  company.py
dgi/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
dgi/repositories/: base.py  csv.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  PROVIDER_CONFIGURATION.md  QUICK_REFERENCE.md  README.md  SCAFFOLDING.md  linkedin_post_week5.md
notebooks/: dgi_portfolio_builder.ipynb  dgi_portfolio_builder_output.ipynb
scripts/: check-quality.sh
tests/: test_ai_chat.py  test_cli_helpers.py  test_filtering.py  test_portfolio.py  test_providers.py  test_sample.py  test_scoring.py  test_screener.py  test_screener_edge.py  test_validation.py
