[tool.poetry]
name = "dgi-toolkit"
version = "0.1.0"
description = ""
authors = ["rubendominguezfalcon <nabariho@gmail.com>"]
readme = "README.md"
packages = [{include = "dgi", from = "."}]

[tool.poetry.scripts]
dgi = "dgi.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.1"
typer = {extras = ["all"], version = "^0.16.0"}
rich = "^14.0.0"
pydantic = "<2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
notebook = "^7.4.4"
pre-commit = "^4.2.0"
mypy = "^1.17.0"
pandas-stubs = "^2.3.0.250703"
black = "^25.1.0"
ruff = "^0.12.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
